--- a/index.html
+++ b/index.html
@@ -4,235 +4,311 @@
 <meta charset="UTF-8">
 <title>Rizwan N — Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+
 <style>
+
 *{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif;scroll-behavior:smooth;}
+
 body{
- background:#ffffff;
- color:#111;
- overflow-x:hidden;
+background:#ffffff;
+color:#111;
+overflow-x:hidden;
 }
+
 /* ---------- scroll progress ---------- */
+
 #progress{
- position:fixed;
- top:0;
- left:0;
- height:4px;
- background:linear-gradient(90deg,#4f8cff,#00ffd0);
- width:0%;
- z-index:9999;
+position:fixed;
+top:0;
+left:0;
+height:4px;
+background:linear-gradient(90deg,#4f8cff,#00ffd0);
+width:0%;
+z-index:9999;
 }
+
 /* ---------- animated gradient bg ---------- */
+
 .bg{
- position:fixed;
- inset:0;
- z-index:-2;
- background:linear-gradient(120deg,#ffffff,#f5f8ff,#ffffff);
- background-size:200% 200%;
- animation:bgmove 18s infinite linear;
+position:fixed;
+inset:0;
+z-index:-2;
+background:linear-gradient(120deg,#ffffff,#f5f8ff,#ffffff);
+background-size:200% 200%;
+animation:bgmove 18s infinite linear;
 }
+
 @keyframes bgmove{
- 0%{background-position:0 0}
- 100%{background-position:200% 200%}
+0%{background-position:0 0}
+100%{background-position:200% 200%}
 }
+
 /* ---------- floating shapes ---------- */
+
 .shape{
- position:fixed;
- width:220px;
- height:220px;
- border-radius:40px;
- filter:blur(40px);
- opacity:.18;
- z-index:-1;
- animation:float 14s infinite linear;
+position:fixed;
+width:220px;
+height:220px;
+border-radius:40px;
+filter:blur(40px);
+opacity:.18;
+z-index:-1;
+animation:float 14s infinite linear;
 }
+
 .s1{background:#4f8cff; top:10%; left:5%;}
 .s2{background:#00ffd0; top:70%; left:10%; animation-duration:20s;}
 .s3{background:#ffb347; top:30%; right:5%; animation-duration:18s;}
+
 @keyframes float{
- 0%{transform:translateY(0) rotate(0)}
- 50%{transform:translateY(-80px) rotate(180deg)}
- 100%{transform:translateY(0) rotate(360deg)}
+0%{transform:translateY(0) rotate(0)}
+50%{transform:translateY(-80px) rotate(180deg)}
+100%{transform:translateY(0) rotate(360deg)}
 }
+
 /* ---------- cursor spotlight ---------- */
+
 #spot{
- position:fixed;
- width:260px;
- height:260px;
- border-radius:50%;
- pointer-events:none;
- background:radial-gradient(circle,#4f8cff22,transparent 70%);
- transform:translate(-50%,-50%);
- z-index:999;
+position:fixed;
+width:260px;
+height:260px;
+border-radius:50%;
+pointer-events:none;
+background:radial-gradient(circle,#4f8cff22,transparent 70%);
+transform:translate(-50%,-50%);
+z-index:999;
 }
+
 /* ---------- nav ---------- */
+
 nav{
- position:sticky;
- top:0;
- background:#ffffffcc;
- backdrop-filter:blur(14px);
- display:flex;
- justify-content:space-between;
- padding:18px 40px;
- z-index:100;
- box-shadow:0 8px 30px rgba(0,0,0,.06);
+position:sticky;
+top:0;
+background:#ffffffcc;
+backdrop-filter:blur(14px);
+display:flex;
+justify-content:space-between;
+padding:18px 40px;
+z-index:100;
+box-shadow:0 8px 30px rgba(0,0,0,.06);
 }
+
 nav a{
- text-decoration:none;
- color:#111;
- margin-left:20px;
- font-weight:600;
- position:relative;
+text-decoration:none;
+color:#111;
+margin-left:20px;
+font-weight:600;
+position:relative;
 }
+
 nav a::after{
- content:'';
- position:absolute;
- left:0;
- bottom:-6px;
- height:3px;
- width:0%;
- background:#4f8cff;
- transition:.3s;
+content:'';
+position:absolute;
+left:0;
+bottom:-6px;
+height:3px;
+width:0%;
+background:#4f8cff;
+transition:.3s;
 }
+
 nav a:hover::after{width:100%;}
+
 /* ---------- hero ---------- */
+
 .hero{
- padding:120px 20px 80px;
- text-align:center;
+padding:120px 20px 80px;
+text-align:center;
 }
+
 .hero img{
- width:170px;
- border-radius:50%;
- box-shadow:0 20px 60px rgba(0,0,0,.18);
- transition:.4s;
+width:170px;
+border-radius:50%;
+box-shadow:0 20px 60px rgba(0,0,0,.18);
+transition:.4s;
 }
+
 .hero img:hover{transform:scale(1.1) rotate(2deg);}
+
 .hero h1{
- font-size:54px;
- font-weight:800;
- margin-top:25px;
- background:linear-gradient(90deg,#4f8cff,#00ffd0);
- -webkit-background-clip:text;
- -webkit-text-fill-color:transparent;
+font-size:54px;
+font-weight:800;
+margin-top:25px;
+background:linear-gradient(90deg,#4f8cff,#00ffd0);
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
 }
+
 .typing{
- font-size:22px;
- margin-top:10px;
- opacity:.8;
- height:30px;
+font-size:22px;
+margin-top:10px;
+opacity:.8;
+height:30px;
 }
+
 /* ---------- sections ---------- */
+
 section{padding:90px 8%;}
+
 .title{
- font-size:36px;
- font-weight:800;
- margin-bottom:45px;
- position:relative;
+font-size:36px;
+font-weight:800;
+margin-bottom:45px;
+position:relative;
 }
+
 .title::before{
- content:'';
- position:absolute;
- left:-20px;
- top:8px;
- width:8px;
- height:32px;
- background:#4f8cff;
- border-radius:4px;
+content:'';
+position:absolute;
+left:-20px;
+top:8px;
+width:8px;
+height:32px;
+background:#4f8cff;
+border-radius:4px;
 }
+
 /* ---------- glass cards ---------- */
+
 .card{
- background:#ffffffdd;
- border-radius:24px;
- padding:32px;
- box-shadow:0 25px 70px rgba(0,0,0,.08);
- transition:.35s;
- transform-style:preserve-3d;
- position:relative;
- overflow:hidden;
+background:#ffffffdd;
+border-radius:24px;
+padding:32px;
+box-shadow:0 25px 70px rgba(0,0,0,.08);
+transition:.35s;
+transform-style:preserve-3d;
+position:relative;
+overflow:hidden;
 }
+
 .card::before{
- content:'';
- position:absolute;
- inset:0;
- background:linear-gradient(120deg,transparent,rgba(255,255,255,.6),transparent);
- transform:translateX(-100%);
- transition:.6s;
+content:'';
+position:absolute;
+inset:0;
+background:linear-gradient(120deg,transparent,rgba(255,255,255,.6),transparent);
+transform:translateX(-100%);
+transition:.6s;
 }
+
 .card:hover::before{transform:translateX(100%);}
 .card:hover{transform:translateY(-10px) scale(1.02);}
+
 /* ---------- grid ---------- */
-.grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:34px; }
+
+.grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:34px;
+}
+
 /* ---------- about ---------- */
-.about{ font-size:19px; line-height:1.9; }
+
+.about{
+font-size:19px;
+line-height:1.9;
+}
+
 /* ---------- skills nested ---------- */
+
 .skill-main{
- background:#f6f8ff;
- border-radius:22px;
- padding:26px;
- margin-bottom:24px;
- box-shadow:inset 0 0 0 2px #e9edff;
- position:relative;
+background:#f6f8ff;
+border-radius:22px;
+padding:26px;
+margin-bottom:24px;
+box-shadow:inset 0 0 0 2px #e9edff;
+position:relative;
 }
+
 .skill-main h3{margin-bottom:16px;}
+
 .bubble{
- display:inline-block;
- background:#fff;
- padding:10px 16px;
- border-radius:999px;
- margin:8px;
- font-size:14px;
- box-shadow:0 8px 22px rgba(0,0,0,.08);
- transition:.25s;
- position:relative;
- overflow:hidden;
+display:inline-block;
+background:#fff;
+padding:10px 16px;
+border-radius:999px;
+margin:8px;
+font-size:14px;
+box-shadow:0 8px 22px rgba(0,0,0,.08);
+transition:.25s;
+position:relative;
+overflow:hidden;
 }
+
 .bubble:hover{
- background:#4f8cff;
- color:#fff;
- transform:scale(1.15);
+background:#4f8cff;
+color:#fff;
+transform:scale(1.15);
 }
+
 /* ---------- buttons ---------- */
+
 .btn{
- display:inline-block;
- padding:14px 22px;
- border-radius:14px;
- background:#4f8cff;
- color:#fff;
- text-decoration:none;
- font-weight:600;
- transition:.3s;
- position:relative;
+display:inline-block;
+padding:14px 22px;
+border-radius:14px;
+background:#4f8cff;
+color:#fff;
+text-decoration:none;
+font-weight:600;
+transition:.3s;
+position:relative;
 }
+
 .btn:hover{
- transform:translateY(-4px);
- box-shadow:0 16px 40px rgba(79,140,255,.4);
+transform:translateY(-4px);
+box-shadow:0 16px 40px rgba(79,140,255,.4);
 }
+
 /* ---------- project hover overlay ---------- */
-.project{ position:relative; overflow:hidden; }
-.project-overlay{
- position:absolute;
- inset:0;
- background:linear-gradient(180deg,transparent,#4f8cffcc);
- color:#fff;
- display:flex;
- align-items:flex-end;
- padding:24px;
- transform:translateY(100%);
- transition:.4s;
+
+.project{
+position:relative;
+overflow:hidden;
 }
-.project:hover .project-overlay{ transform:translateY(0); }
+
+.project-overlay{
+position:absolute;
+inset:0;
+background:linear-gradient(180deg,transparent,#4f8cffcc);
+color:#fff;
+display:flex;
+align-items:flex-end;
+padding:24px;
+transform:translateY(100%);
+transition:.4s;
+}
+
+.project:hover .project-overlay{
+transform:translateY(0);
+}
+
 /* ---------- reveal ---------- */
-.reveal{ opacity:0; transform:translateY(60px); transition:1s; }
-.reveal.show{ opacity:1; transform:none; }
+
+.reveal{
+opacity:0;
+transform:translateY(60px);
+transition:1s;
+}
+
+.reveal.show{
+opacity:1;
+transform:none;
+}
+
 </style>
 </head>
+
 <body>
+
 <div id="progress"></div>
 <div class="bg"></div>
 <div class="shape s1"></div>
 <div class="shape s2"></div>
 <div class="shape s3"></div>
 <div id="spot"></div>
+
 <nav>
 <b>Rizwan N</b>
 <div>
@@ -246,17 +322,22 @@ section{padding:90px 8%;}
 <a href="#contact">Contact</a>
 </div>
 </nav>
+
 <section class="hero">
 <img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg">
 <h1>Associate Software Engineer</h1>
 <div class="typing" id="typing"></div>
 </section>
+
 <section id="about" class="reveal">
 <h2 class="title">About Me</h2>
 <div class="card about">
-Automation-focused developer building AI tools, bots, testing systems, and smart web applications. Specialized in Python automation, job-workflow bots, AI chat systems, and interactive utilities. I focus on real-world usable systems — not toy demos — combining AI + web + scripting for productivity impact.
+Automation-focused developer building AI tools, bots, testing systems, and smart web applications.  
+Specialized in Python automation, job-workflow bots, AI chat systems, and interactive utilities.  
+I focus on real-world usable systems — not toy demos — combining AI + web + scripting for productivity impact.
 </div>
 </section>
+
 <section id="experience" class="reveal">
 <h2 class="title">Experience</h2>
 <div class="grid">
@@ -270,14 +351,18 @@ Automation-focused developer building AI tools, bots, testing systems, and smart
 </div>
 </div>
 </section>
+
 <section id="education" class="reveal">
 <h2 class="title">Education</h2>
 <div class="card">
-B.Tech — Computer Science CGPA: 8.78 — College Topper
+B.Tech — Computer Science  
+CGPA: 8.78 — College Topper
 </div>
 </section>
+
 <section id="skills" class="reveal">
 <h2 class="title">Skills</h2>
+
 <div class="skill-main">
 <h3>Languages</h3>
 <span class="bubble">Python</span>
@@ -285,6 +370,7 @@ B.Tech — Computer Science CGPA: 8.78 — College Topper
 <span class="bubble">C</span>
 <span class="bubble">JavaScript</span>
 </div>
+
 <div class="skill-main">
 <h3>Web</h3>
 <span class="bubble">HTML</span>
@@ -292,11 +378,13 @@ B.Tech — Computer Science CGPA: 8.78 — College Topper
 <span class="bubble">React Basics</span>
 <span class="bubble">REST APIs</span>
 </div>
+
 <div class="skill-main">
 <h3>Databases</h3>
 <span class="bubble">MySQL</span>
 <span class="bubble">SQLite</span>
 </div>
+
 <div class="skill-main">
 <h3>Additional</h3>
 <span class="bubble">Automation</span>
@@ -305,24 +393,32 @@ B.Tech — Computer Science CGPA: 8.78 — College Topper
 <span class="bubble">Git</span>
 <span class="bubble">Linux</span>
 </div>
+
 </section>
+
 <section id="projects" class="reveal">
 <h2 class="title">Projects</h2>
+
 <div class="grid">
+
 <div class="card project">
 <h3>AI Chatbot</h3>
 <div class="project-overlay">LLM powered conversational system</div>
 </div>
+
 <div class="card project">
 <h3>AI Mouse</h3>
 <div class="project-overlay">Gesture controlled cursor system</div>
 </div>
+
 <div class="card project">
 <h3>Naukri Automation Bot</h3>
 <div class="project-overlay">Automated job apply pipeline</div>
 </div>
+
 </div>
 </section>
+
 <section id="resume" class="reveal">
 <h2 class="title">Resume</h2>
 <div class="grid">
@@ -330,13 +426,16 @@ B.Tech — Computer Science CGPA: 8.78 — College Topper
 <div class="card"><a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf">Associate Resume</a></div>
 </div>
 </section>
+
 <section id="cert" class="reveal">
 <h2 class="title">Certifications</h2>
 <div class="card">
-Be10x AI Mastery — Applied AI tools, workflow automation, productivity AI deployment. <br><br>
+Be10x AI Mastery — Applied AI tools, workflow automation, productivity AI deployment.
+<br><br>
 <a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf">View Certificate</a>
 </div>
 </section>
+
 <section id="contact" class="reveal">
 <h2 class="title">Contact</h2>
 <div class="card">
@@ -347,28 +446,42 @@ GitHub: RizwanB312<br>
 LinkedIn: linkedin.com/in/rizwan-n-72955234a
 </div>
 </section>
+
 <script>
+
 /* spotlight */
 const spot=document.getElementById('spot');
 document.addEventListener('mousemove',e=>{
 spot.style.left=e.clientX+'px';
 spot.style.top=e.clientY+'px';
 });
+
 /* scroll progress */
 window.addEventListener('scroll',()=>{
 const h=document.documentElement;
 const sc=(h.scrollTop)/(h.scrollHeight-h.clientHeight)*100;
 document.getElementById('progress').style.width=sc+'%';
 });
+
 /* reveal */
 const els=document.querySelectorAll('.reveal');
-const obs=new IntersectionObserver(es=>{ es.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show');}); });
+const obs=new IntersectionObserver(es=>{
+es.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show');});
+});
 els.forEach(el=>obs.observe(el));
+
 /* typing */
 const text="AI • Automation • Full Stack • Testing";
 let i=0;
-function type(){ if(i<text.length){ document.getElementById('typing').innerHTML+=text[i++]; setTimeout(type,60); } }
+function type(){
+if(i<text.length){
+document.getElementById('typing').innerHTML+=text[i++];
+setTimeout(type,60);
+}
+}
 type();
+
 </script>
+
 </body>
 </html>
